# zlog

./: .clang-format  .editorconfig  .gitignore  AUTHORS  BUILD  BUILD.bazel  CLAUDE.md  CMakeLists.txt  ChangeLog  Changelog  Doxyfile  Makefile.am  README  README.markdown  README.md  TODO  UsersGuide-CN.html  UsersGuide-EN.html  autoconf.sh  autogen.sh  buf.c  buf.h  category.c  category.h  conf.c  conf.h  configure.ac  devconf.sh  event.c  event.h  format.c  format.h  index.html  makefile  mdc.c  mdc.h  note.txt  params.json  priority.c  priority.h  (+29 more)
.github/workflows/: cmake-multi-platform.yml
cmake/: FindUnixem.cmake  LoadLibraries.cmake  toolchain-mingw64.cmake
cpack/: CMakeLists.txt  CPackConfig.cmake
cpack/zlog/: CMakeLists.txt  postinst  postrm
doc/: GettingStart-CN.txt  GettingStart-EN.txt  Makefile  Makefile.am  UsersGuide-CN.lyx  UsersGuide-EN.lyx  UsersGuide-EN.md  UsersGuide.lyx  developer.md  makefile  performence.txt  zlog.conf
libxlog/: Makefile.am  buf.c  category.c  conf.c  event.c  event.h  format.c  makefile.aix  makefile.linux  makefile.static  mdc.h  priority.c  rule.c  spec.c  spec.h  xlog.c  zc_arraylist.h  zc_defs.h  zc_error.h  zc_hashtable.c  zc_util.c  zc_util.h
libzlog/: Makefile.am  buf.c  buf.h  category.c  category.h  category_table.c  category_table.h  conf.c  conf.h  event.c  event.h  format.c  format.h  level.c  level.h  level_list.c  level_list.h  makefile.aix  makefile.linux  makefile.static  mdc.c  mdc.h  priority.c  priority.h  record.c  record.h  record_table.c  record_table.h  rotater.c  rotater.h  rule.c  rule.h  spec.c  spec.h  thread.c  thread.h  thread_list.h  thread_table.c  thread_table.h  zc_arraylist.c  (+14 more)
scripts/: test.sh
src/: CMakeLists.txt  Makefile  Makefile.am  buf.c  buf.h  buffer.h  category.c  category.h  category_table.c  category_table.h  conf.c  conf.h  consumer.c  consumer.h  deepness.c  deepness.h  event.c  event.h  fifo.c  fifo.h  file.h  fmacros.h  format.c  format.h  level.c  level.h  level_list.c  level_list.h  lockfile.c  lockfile.h  makefile  mdc.c  mdc.h  misc.h  mk_release.sh  record.c  record.h  record_table.c  record_table.h  release.c  (+33 more)
stylesheets/: stylesheet.css
test/: CMakeLists.txt  Makefile.am  consumer_static_file_single_B.conf  consumer_static_file_single_cmp.conf  fifo_test.c  libxlog.so.0  makefile  makefile.linux  speed.record.txt  stap.sh  static_file_single_A.conf  test.stp  test_bitmap.c  test_buf.c  test_category.c  test_category.conf  test_conf.c  test_conf.conf  test_conf2.c  test_conf2.conf.h  test_consumer_dynamic_file_rotate.conf  test_consumer_dynamic_file_single.conf  test_consumer_dynamic_record.conf  test_consumer_multithread.conf  test_consumer_press_zlog.conf  test_consumer_static_file_rotate.conf  test_consumer_static_file_single.conf  test_consumer_static_record.conf  test_default.c  test_default.conf  test_dynamic_file.conf  test_dzlog_conf.c  test_enabled.c  test_enabled.h  test_filemv.c  test_hashtable.c  test_hello.c  test_hello.conf  test_hex.c  test_hex.conf  (+43 more)
test/fuzzers/: zlog_init_fuzzer.c
tools/: Makefile.am  make_tar.sh  mk_pkgconfig.sh  mk_targz.sh  mktarball.sh  pre-commit  zlog-chk-conf.c  zlog-gen-conf.c
zlog-chk-conf/: Makefile.am  zlog-chk-conf  zlog-chk-conf.c
