lib_LTLIBRARIES = libzlog.la

libzlog_la_SOURCES =	\
	buf.c		\
	buf.h		\
	category.c	\
	category.h	\
	conf.c		\
	conf.h		\
	event.c		\
	event.h		\
	format.c	\
	format.h	\
	mdc.c		\
	mdc.h		\
	level.c	\
	level.h	\
	thread.c	\
	thread.h	\
	rotater.c	\
	rotater.h	\
	rule.c		\
	rule.h		\
	spec.c		\
	spec.h		\
	zlog.c		\
	zc_arraylist.c	\
	zc_arraylist.h	\
	zc_error.c	\
	zc_error.h	\
	zc_hashtable.c	\
	zc_hashtable.h	\
	zc_util.c	\
	zc_util.h	\
	zc_xplatform.c	\
	zc_xplatform.h	\
	zc_defs.h	

libzlog_la_LIBADD = $(PTREADLIB)
include_HEADERS = zlog.h
