lib_LTLIBRARIES = libzlog.la

libzlog_la_SOURCES =	\
	zc_profile.c	\
	zc_profile.h	\
	zc_arraylist.c	\
	zc_arraylist.h	\
	zc_hashtable.c	\
	zc_hashtable.h	\
	zc_util.c	\
	zc_util.h	\
	zc_xplatform.c	\
	zc_xplatform.h	\
	zc_defs.h	\
	rotater.c	\
	rotater.h	\
	level.c		\
	level.h		\
	level_list.c	\
	level_list.h	\
	spec.c		\
	spec.h		\
	format.c	\
	format.h	\
	buf.c		\
	buf.h		\
	category.c	\
	category.h	\
	conf.c		\
	conf.h		\
	event.c		\
	event.h		\
	mdc.c		\
	mdc.h		\
	thread.c	\
	thread.h	\
	rule.c		\
	rule.h		\
	zlog.c

libzlog_la_LIBADD = $(PTREADLIB)
#libzlog_la_LDFLAGS = -version-info 1:1:0
include_HEADERS = zlog.h
