lib_LTLIBRARIES = libzlog.la

libzlog_la_SOURCES =	\
	zc_profile.c	\
	zc_profile.h	\
	zc_arraylist.c	\
	zc_arraylist.h	\
	zc_hashtable.c	\
	zc_hashtable.h	\
	zc_util.c	\
	zc_util.h	\
	zc_xplatform.c	\
	zc_xplatform.h	\
	zc_defs.h	\
	rotater.c	\
	rotater.h	\
	level.c		\
	level.h		\
	level_list.c	\
	level_list.h	\
	spec.c		\
	spec.h		\
	format.c	\
	format.h	\
	rule.c		\
	rule.h		\
	conf.c		\
	conf.h		\
	buf.c		\
	buf.h		\
	event.c		\
	event.h		\
	mdc.c		\
	mdc.h		\
	thread.c	\
	thread.h	\
	thread_list.c	\
	thread_list.h	\
	record.c	\
	record.h	\
	record_table.c	\
	record_table.h	\
	category.c	\
	category.h	\
	category_table.c	\
	category_table.h	\
	zlog.c

libzlog_la_LIBADD = $(PTREADLIB)
libzlog_la_LDFLAGS = -version-info 1:0:0
include_HEADERS = zlog.h
